cabal-version:      3.0
name:               twt
version:            0.1.0.0
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Fundamentals.TABT
        Fundamentals.V
        Lifting.CAG
        Lifting.RNT
        Lifting.R
        Computing.ATF
        Computing.FCF
        Computing.OS
        Computing.OP
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , first-class-families
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable twt
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        twt

    hs-source-dirs:   app
    default-language: Haskell2010
